--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "type": "module",
   "dependencies": {
     "@sveltejs/svelte-scroller": "^2.0.7",
-    "d3": "^7.8.5"
+    "d3": "^7.8.5",
+    "fft-js": "^0.0.12",
+    "fft.js": "^4.0.4"
   }
 }
