--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@sveltejs/svelte-scroller": "^2.0.7",
     "d3": "^7.8.5",
     "fft-js": "^0.0.12",
-    "fft.js": "^4.0.4"
+    "fft.js": "^4.0.4",
+    "math.js": "^1.1.46"
   }
 }
