--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
   "dependencies": {
     "@sveltejs/svelte-scroller": "^2.0.7",
     "d3": "^7.8.5",
+    "date-fns": "^3.3.1",
     "fft-js": "^0.0.12",
     "fft.js": "^4.0.4",
-    "math.js": "^1.1.46"
+    "math.js": "^1.1.46",
+    "mathjs": "^12.4.0"
   }
 }
