--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "@sveltejs/adapter-auto": "^3.0.0",
+    "@sveltejs/adapter-auto": "1.0.0-next.30",
     "@sveltejs/adapter-static": "^3.0.1",
-    "@sveltejs/kit": "^2.0.0",
+    "@sveltejs/kit": "1.0.0-next.327",
     "@sveltejs/vite-plugin-svelte": "^3.0.0",
-    "svelte": "^4.2.12",
+    "svelte": "3.46.62",
     "vite": "^5.1.5"
   },
   "type": "module",
